--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -596,6 +596,9 @@
     <None Include="..\..\MobileClient\www\Javascript\UI\MenuScreen\MapPreviewMaker.js">
       <Filter>Javascript\UI\MenuScreen</Filter>
     </None>
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\GameToolbarSystem.js">
+      <Filter>Javascript\Render\Systems</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
