--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -95,24 +95,16 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SceneRenderer.css" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightPortraits\Baron.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightPortraits\Colonel.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightUnits\FlakTrooperFight.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightUnits\NibblerFight.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightUnits\PeaceKeeperFight.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightUnits\EmpireFight.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightUnits\JunkPeopleFight.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightUnits\TeslaTrooperFight.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\FightUnits\UnitDeathFight.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Fight\VS.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Particles\GroundExplosion.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\SpriteAnimations.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\TerrainSkins.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Comanche.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Biker.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\DarkAdroit.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\FlakTrooper.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\IonDrone.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Nibbler.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\PeaceKeeper.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Ranger.js" />
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Sting.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Empire.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\JunkPeople.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\TeslaTrooper.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Base.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Factory.js" />
